fix align

--- a/_sass/_page_mods.scss
+++ b/_sass/_page_mods.scss
@@ -1,19 +1,31 @@
 $block-width: 285px;
-//$base-color: #626262;
+$block-height: 555px;
 $border-radius: 5px;
+//$base-color: #626262;
 
 .mods-list{
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
+    flex-wrap: wrap;
+}
+
+%mod-item-base{
+    width: $block-width;
+    height: $block-height;
+    border: solid 1px #d8d8d8;
+    margin-bottom: 50px;
+}
+
+.mod-placeholder{
+    @extend %mod-item-base;
+    border-color: transparent;
 }
 
 .mod-item, .page-content a.mod-item{
-    width: $block-width;
-    border: solid 1px #d8d8d8;
+    @extend %mod-item-base;
     box-shadow: 0px 0px 12.48px 0.52px rgba(0, 0, 0, 0.13);
     border-radius: $border-radius;
-    height: 555px;
     display: flex;
     flex-direction: column;
     position: relative;
